# easyServerCore

./: CMakeLists.txt  Coro_sheduler.cc  Coro_sheduler.h  Epoll.cc  LICENSE  README.md  Tpoll.cc  WorkT.cc  WorkT.h
app/: build.sh  mainWebServer.cc
include/: Coro_scheduler.h  Server.h  Types.h  config.h
src/: Coro_scheduler.cc  Coro_scheduler.h  Coro_sheduler.cc  Coro_sheduler.h  Epoll.cc  Epoll.h  Server.cc  Tpool.cc  Tpool.h  WorkT.cc  WorkT.h  cqueue.h  cqueue.hpp  private_types.h
